less/plugin-ecommerce.less
// ---------------------------------------------------
// Plugin: Ecommerce
// ---------------------------------------------------

// -------------------------------
// Single Product
// -------------------------------

// Style for tablet and desktop

.product-article {
    @media only screen and (min-width: 450px) {
        float: left;
        width: 100%;
    }
}

// Product images
// --------------

.product-images {
    float: left;
    margin-bottom: 1em;
    width: 100%;
    @media only screen and (min-width: 900px) {
        margin-right: 4%;
        width: 51%;
    }
    .image-link {
        height: auto;
        background-color: transparent;
        background-image: none !important;
    }
    .image {
        display: block;
        max-height: 600px;
        vertical-align: top;
        margin: 0 auto;
        @media only screen and (max-width: 900px) {
            max-height: 450px;
        }
        @media only screen and (max-width: 600px) {
            max-height: 300px;
        }
        @media @mobile {
            max-height: 250px;
        }
    }
}

.product-gallery { text-align: center; }

// Product Content
// ---------------

.product-content {
    @media only screen and (min-width: 900px) {
        display: inline-block;
        width: 45%;
    }
}

.ecomproduct {
    display: inline-block;
    width: 100%;
    margin: 30px auto;
    .image-link,
    .gallery-item {
        background-color: transparent;
    }
    .product-title {
        color: @color__ecomproduct-title--text;
    }
    .product-price {
        color: @color__ecomproduct-price--text;
        font-size: @font__p--font-size;
    }
}

// Product Options

.product-actions {
    display: inline-block;
    margin: 40px 0;
    width: 100%;
}
.product-actions .form {
    background-color: transparent;
    legend {
        padding: 0;
        margin-bottom: 0;
        color: @color-swatch4;
        font-size: bkscale(@font__h3--font-size,0.8);
        line-height: bkscale(@font__h3--line-height,0.8);
        background-color: transparent;
    }
    .form-body {
        padding: 0;
    }
    .form-group {
        margin: 20px 0;
    }
    select {
        width: 100%;
        background-color: transparent;
    }
    .button {
        float: left;
        width: 47%;
        @media only screen and (max-width: 450px) {
            width: 100%;
            margin-bottom: 20px;
        }
    }
    @media @mobile {
        background-color: transparent;
    }
}

// Categories and Tags

.product-attributes {
    display: inline-block;
    width: 100%;
    margin: 0 0 40px;
    background-color: transparent;
    p, a {
        font-size: bkscale(@font__p--font-size,0.8);
        line-height: bkscale(@font__p--line-height,0.8);
    }
}

// View Basquet Button

.view-basket-wrap .button {
    float: right;
    width: 47%;
    text-align: center;
    background-color: @color__button--background--hover;
    &:hover {
        background-color: @color__button--background;
    }
    @media only screen and (max-width: 450px) {
        width: 100%;
        margin-bottom: 20px;
    }
}

// Ecom forms

// Styles are set in 'less > forms-and-buttons.less'

.responsivecolumns {
    .product-article {
        float: left;
        width: 100%;
    }
    .product-images {
        float: left;
        margin-bottom: 1em;
        width: 100%;
    }
    .product-content {
        width: 100%;
    }
    .product-images .image {
        max-height: 250px;
    }
    .product-actions .form .button {
        width: 100%;
        margin-bottom: 20px;
    }
    .view-basket-wrap .button {
        width: 100%;
        margin-bottom: 20px;
    }
}

// -----------------------------
// Product List
// -----------------------------

.ecomproductslist,
.ecomfeaturedproducts {
    .form {
        margin: 20px 0;
    }
    .label {
        color: @color__ecomproductslist-label--text;
    }
    .product-item-title .title-link {
        color: @color__ecomproductslist-product-title--text;
    }
}

.listing-title {
    display: none;
}

// Product Filter
// --------------

// Styles are set in 'less > forms-and-buttons.less'


// Products List
// -------------

.product-list {
    .flex-display;
    .justify-content(space-between);
    .flex-wrap(wrap);
    .align-items(flex-start);
    .align-content(space-between);
}

// Product Item

.product-item {
    position: relative;
    width: 32%;
    margin-bottom: 20px;
    // Display 100% at mobile
    @media only screen and (max-width: 600px) {
        width: 100%;
    }
}

.product-item-details {
    margin-top: 0;
    @media @mobile {
        text-align: center;
    }
}

// Product Image

.ecomproductslist,
.ecomfeaturedproducts {
    .product-item-image,
    .product-item-image .image-link,
    .product-item-image .image {
        @media only screen and (max-width: 600px) {
            max-height: 200px;
            height: auto;
            line-height: normal;
        }
    }
}

.product-item-image,
.product-item-image .image-link,
.product-gallery .gallery-item,
.product-image .image-link,
.basket-item-image .image-link {
    background-color: transparent;
}

// Product Details

.ecomproductslist,
.ecomfeaturedproducts {
    .title-link,
    .listing-order {
        font-family:@font__p--font-family;
        font-size:@font__p--font-size;
        line-height:@font__p--line-height;
        font-weight: @font__p--font-weight;
        color: @color__h3--text;
        letter-spacing: @font__p--letter-spacing;
    }
}

.ecomproductslist,
.ecomfeaturedproducts {
    .listing-order {
        display: inline-block;
        width: 100%;
        padding: 20px 0 36px;
        font-size: bkscale(@font__p--font-size,0.8);
        line-height: bkscale(@font__p--line-height,0.8);
        color: @color__p--text;
        text-align: center;
        opacity: 0.9;
        @media only screen and (max-width: 600px) {
            padding: 10px 0 20px;
        }
    }
}

.ecomproductslist,
.ecomfeaturedproducts {
    .title-link:hover {
        color: @color__secondary;
        text-decoration: none;
    }
}

// Pagination
// ----------

.listing-footer {
    display: inline-block;
    margin: 3em 0;
    width: 100%;
    clear: both;
    .listing-pagination {
        padding-top: 20px;
        border-top: 1px solid darken(@color__body--background, 8%);
    }
}

.ecomproductslist .pagination-item {
    .button {
        padding: 0;
        margin-right: 3px;
        width: 26px;
        height: 26px;
        color: @color-swatch5;
        background-color: transparent;
        border: none;
    }
    &.current .button {
        color: @color-swatch3;
    }
    .button:hover {
        border: none;
        color: @color-swatch3;
    }
}



// -----------------
// Featured products
// -----------------

.ecomfeaturedproducts .listing-title {
    padding: 1em 0 2em;
}

// One Product

.ecomfeaturedproducts .products-1 {
    -webkit-column-count: 1;
    -moz-column-count: 1;
    column-count: 1;
    .product-item {
        width: 100%;
    }
    .product-item-image {
        background-color: transparent;
        .image-link {
            background-color: transparent;
        }
    }
    .product-item-details {
        background-color: transparent;
        border: none;
    }
}

// Two and Four Products

.ecomfeaturedproducts .products-2,
.ecomfeaturedproducts .products-4 {
    .product-item {
        width: 48%;
        @media @mobile {
            width: 100%;
        }
    }
}

// -----------------------------------
// Products list in Responsive Columns
// -----------------------------------

.responsivecolumns {
    .ecomproductslist,
    .ecomfeaturedproducts {
        .product-item,
        .products-2 .product-item,
        .products-4 .product-item {
            position: relative;
            width: 48%;
            margin-bottom: 20px;
            // Display 100% at mobile
            @media @mobile {
                width: 100%;
            }
        }
    }
    .product-item-image,
    .product-item-image .image-link {
        height: 150px;
        line-height: 150px;
        @media @mobile {
            height: 200px;
            line-height: 200px;
        }
    }
    .product-actions .form .button,
    .view-basket-wrap .button {
        width: 100%;
        margin-bottom: 20px;
    }
    .product-item-details {
        text-align: center;
    }
}

.responsivecolumns {
    .ecomproductslist,
    .ecomfeaturedproducts {
        // Display 100%
        .product-item,
        .ecomfeaturedproducts .products-2 .product-item,
        .ecomfeaturedproducts .products-4 .product-item {
            width: 100%;
        }
    }
}


// -----------------------------
// Basket Widget
// -----------------------------

.basket-item {
    position: relative;
    padding-bottom: 20px;
    border-bottom: 1px solid darken(@color__body--background, 8%);
}

.item-image  { width: 200px; }

// Display basket image and content inline

.basket-item-image,
.basket-item-details {
    display: inline-block;
    vertical-align: top;
    margin-right: 20px;
    @media @tablet {
        width: 100%;
        margin-right: 0;
    }
}

// Item Remove Button

.item-remove {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 9999;
    // Remove icon spacing
    &:before {
        margin-right: 0;
    }
}
// Hide button text

.remove-text {
    display: none;
}

// Basket Image

.basket .image {
    max-height: 200px;
    max-width: 200px;
    @media @mobile {
        max-height: inherit;
    }
}

// Quantity Field

.quantity-field {
    background: transparent;
    padding: 0 10px;
}

.quantity-wrap {
    background: transparent;
    .button--quantity {
        width: 22px;
        height: 22px;
        min-height: inherit;
        margin: 0;
        line-height: 0;
    }
    // button rounded corners
    .quantity-minus {
        -webkit-border-radius: 3px 0 0 3px;
        -moz-border-radius: 3px 0 0 3px;
        border-radius: 3px 0 0 3px;
    }
    .quantity-plus {
        -webkit-border-radius: 0 3px 3px 0;
        -moz-border-radius: 0 3px 3px 0;
        border-radius: 0 3px 3px 0;
    }
    // increase button size for mobile
    @media @mobile {
        max-width: 50%;
        .quantity-field {
            height: 40px;
            padding: 9px;

        }
        .button--quantity {
            margin: 0;
            width: 25%;
            height: 40px;
        }
    }
}

// Basket Total

.basket-total {
    padding-bottom: 20px;
    border-bottom: 1px solid darken(@color__body--background, 8%);
}

// View Basket Button

.view-basket {
    margin: 20px 0;
}

// -----------------------------
// Basket Summary
// -----------------------------


.ecombasketsummary .summary-title {
    padding-bottom: 35px;
    @media @tablet {
        padding-bottom: 4px;
    }
}

// Table

.ecombasketsummary {
    form,
    .form {
        background-color: transparent;
    }
    table,
    th,
    td {
        border: none;
    }
    .table-row {
        border: 1px solid darken(@color__body--background, 8%);
        &:last-child {
            border: none;
        }
    }
    th:nth-child(4) {
        padding: 16px 12px;
        text-align: right;
        @media @mobile {
            text-align: left;
        }
    }
    .summary-item-link {
        background-image: none !important;
    }
    .image {
        max-height: 100px;
    }
}

@media only screen and (max-width : 768px) and (min-width : 480px) {
    .summary-table .cell--image {
        max-width: 50px;
    }
}


@media only screen and (max-width: 480px) {
    .summary-table .cell {
        width: 100%;
        display: inline-block;
    }
}

.order-total,
.summary-item-total {
    padding: 16px 0;
    text-align: right;
    @media @mobile {
        text-align: left;
    }
}

.order-total {
    color: @color-swatch4;
}

// Your basket is empty message

.ecombasketsummary .message {
    padding-bottom: 35px;
}

